schema/testdata/validation_expressions_compare_model_operand_diff_types/schema.keel
model User {
    fields {
        identity Identity @unique
    }
}
model BankAccount {
    fields {
        identity Identity @unique
    }
    actions {
        get getBankAccount(id) {
            @permission(expression: ctx.identity.user == bankAccount.identity)
        }
    }
}