schema/testdata/errors/permission_LHS_identity_comparison.keel
model User {
    fields {
        identity Identity
    }
}

model UserProject {
    fields {
        user User
        project Project
    }
}

model Project {
    fields {
        users UserProject[]
    }

    @permission(
        //expect-error:34:36:E030:project.users.user.identity is an array of Identity. Only 'in' or 'not in' can be used
        expression: ctx.identity == project.users.user.identity,
        actions: [create]
    )
}
